@@ -1,6 +1,5 @@
 Add splash screen at startup: (-splash:gdata-contacts-icon.png)
-Handle google app email type
-Externilize apacheds in external xml file (config.properties) especially allow anonymous + user/password of admin session (security reason)
+Externilize apacheds in external file (config.properties) especially allow anonymous + user/password of admin session (security reason)
 Create installation doc
 Create setup doc
 Create thundrbird documentation
@@ -10,3 +9,5 @@ Use quartz to schedule synchronize
 Create a transaction system (begin/commit/rollback) to avoid network issues and keep a clean state in all case 
 	(create temp dir, populate it, replace current with temp one when it's done)
 Add replication/referal config param
+Add group feed
+Replace User.uid with real UUID
